--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -203,7 +203,7 @@ $(function(){
 	
 	$('.ca_toolsView').tooltipster({
 		trigger: 'custom',
-		triggerOpen: {mouseenter:true,click:true,touchstart:true},
+		triggerOpen: {click:true,touchstart:true},
 		contentAsHTML: true,
 		animation: 'none',
 		arrow: true,
@@ -271,7 +271,7 @@ $(function(){
 	});
 	$('.ca_section').tooltipster({
 		trigger: 'custom',
-		triggerOpen: {mouseenter:true,click:true,touchstart:true},
+		triggerOpen: {click:true,touchstart:true},
 		contentAsHTML: true,
 		animation: 'none',
 		delay: [1000, 2000],
@@ -298,7 +298,7 @@ $(function(){
 	});
 	$('.ca_categories').tooltipster({
 		trigger: 'custom',
-		triggerOpen: {mouseenter:true,click:true,touchstart:true},
+		triggerOpen: {click:true,touchstart:true},
 		contentAsHTML: true,
 		animation: 'none',
 		delay: [1000, 2000],
@@ -328,7 +328,7 @@ $(function(){
 	});
 	$('.ca_subcategories').tooltipster({
 		trigger: 'custom',
-		triggerOpen: {mouseenter:true,click:true,touchstart:true},
+		triggerOpen: {click:true,touchstart:true},
 		contentAsHTML: true,
 		animation: 'none',
 		delay: [1000, 2000],
