delay on opening tool tip for deactivated icons

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -236,6 +236,7 @@ $(function(){
 	$('.ca_toolsView').tooltipster({
 		multiple: true,
 		triggerOpen: { mouseenter: true },
+		delay: [3000,0],
 		functionBefore: function(instance,helper) {
 			var origin = $(helper.origin);
 			if ( ! isIconEnabled(origin) ) {
@@ -311,6 +312,7 @@ $(function(){
 	});
 	$('.ca_section').tooltipster({
 		multiple: true,
+		delay: [3000,0],
 		triggerOpen: { mouseenter: true },
 		functionBefore: function(instance,helper) {
 			instance.content('Click to switch from available apps, installed apps, previous apps, pinned apps');
@@ -351,6 +353,7 @@ $(function(){
 	$('.ca_categories').tooltipster({
 		multiple: true,
 		triggerOpen: { mouseenter: true },
+		delay: [3000,0],
 		functionBefore: function(instance,helper) {
 			var origin = $(helper.origin);
 			if ( ! isIconEnabled(origin) ) {
@@ -394,6 +397,7 @@ $(function(){
 	});
 	$('.ca_subcategories').tooltipster({
 		multiple: true,
+		delay: [3000,0],
 		triggerOpen: { mouseenter: true },
 		functionBefore: function(instance,helper) {
 			var origin = $(helper.origin);
