Clicking on a autocomplete will not automatically search

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -997,6 +997,9 @@ function populateAutoComplete() {
 		if (data) {
 			$("#awesomepleteScript").html(data);
 			searchBoxAwesomplete.maxItems = 20;
+			Awesomplete.$('#searchBox').addEventListener('awesomplete-selectcomplete',function() {
+				doSearch();
+			});
 		}
 	});
 }
