--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -507,7 +507,7 @@ function setToolTip() {
 		animation: 'none',
 		trigger: 'custom',
 		triggerOpen: {mouseenter:false,click:true,touchstart:true},
-		triggerClose:{click:true,scroll:true,mouseleave:true},
+		triggerClose:{click:true,mouseleave:true},
 		delay:[<?=$cfg['hoverTime']?>,1],
 		interactive: true,
 		viewportAware: true,
